# mavenets

./: README.md  pyproject.toml  setup.cfg
src/: data.py  run.py
src/data/: featurize.py  load.py  not_norm_train_data_B1351.csv  not_norm_train_data_E484K.csv  not_norm_train_data_N501Y.csv  not_norm_train_data_Wuhan_Hu_1.csv  not_norm_train_data_omicron_BA1.csv  not_norm_train_data_omicron_BA2.csv  not_norm_train_data_omicron_Wuhan_Hu_1.csv  not_norm_valid_data_B1351.csv  not_norm_valid_data_E484K.csv  not_norm_valid_data_N501Y.csv  not_norm_valid_data_Wuhan_Hu_1.csv  not_norm_valid_data_omicron_BA1.csv  not_norm_valid_data_omicron_BA2.csv  not_norm_valid_data_omicron_Wuhan_Hu_1.csv  spec.py  train_data.csv  valid_data.csv
src/mavenets/: legacy_run.py  report.py  run.py  run_mpn.py  tools.py  util.py
src/mavenets/data/: __init__.py  featurize.py  graph.py  load.py  report.py  spec.py
src/mavenets/data/featurize/: __init__.py  bioembeddings.py  core.py  t5.py  transform.py
src/mavenets/example/: mlp_sim.py  run_lrmlp.py  run_mlp.py  run_mlp_linearhead.py  run_mpn.py  run_t5_mlp.py  run_transformer.py  sim.py  test_report.py  transformer_sim.py
src/mavenets/network/: __init__.py  base.py  mpn.py  nontraditional.py  transformer.py  tune.py
src/mavenets/sample/: __init__.py  step.py
src/network/: __init__.py  network.py  transformer.py  tune.py
