[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = mavenets
version = 0.0.1
author = Aleksander Evren Paetzold Durumeric
author_email = alekepd@gmail.com
description = Tools for training neural networks on mave data
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/alekepd/writ
#project_urls =
#    Bug Tracker = https://github.com/alekepd/writ/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    torch
    typing_extensions
    pandas
    torch_geometric
    torch_scatter
    einops

[options.packages.find]
where = src
